--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,21 @@
 [tox]
-envlist = py37
+envlist = py36,py37,py38
 
 [testenv]
 setenv =
     NOTHREAD = true
 deps =
-    -rrequirements.txt
-    flake8
-    pytest-cov
+    -rrequirements-dev.txt
 commands =
     flake8 andriller/
     pytest --cov=andriller tests/
     coverage html
 
+[testenv:py36]
+basepython = python3.6
+
 [testenv:py37]
 basepython = python3.7
+
+[testenv:py38]
+basepython = python3.8
