docs info added and requirements fixed

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+wheel
 dateutils==0.6.7
 javaobj-py3==0.2.4
 pycryptodome==3.9.4
@@ -6,3 +7,4 @@ XlsxWriter==1.2.6
 Jinja2==2.10.3
 timeout-decorator==0.4.1
 appdirs==1.4.3
+dataclasses>=0.6.7
