--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 wheel
 dateutils==0.6.7
-javaobj-py3==0.2.4
-pycryptodome==3.9.4
+javaobj-py3==0.4.0.1
+pycryptodomex==3.9.7
 python-dateutil==2.8.0
 XlsxWriter==1.2.6
 Jinja2==2.10.3
