--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ pycryptodomex==3.9.7
 python-dateutil==2.8.0
 XlsxWriter==1.2.8
 Jinja2==2.11.2
-timeout-decorator==0.4.1
-appdirs==1.4.3
+wrapt-timeout-decorator==1.3.1
+appdirs==1.4.4
 requests==2.23.0
 dataclasses>=0.7;python_version=="3.6"
