--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 wheel
-dateutils==0.6.7
-javaobj-py3==0.4.1
-pycryptodomex==3.9.7
-python-dateutil==2.8.0
-XlsxWriter==1.2.8
-Jinja2==2.11.2
+dateutils
+javaobj-py3>=0.4.3
+pycryptodomex
+python-dateutil
+XlsxWriter
+Jinja2
 wrapt-timeout-decorator==1.3.1
-appdirs==1.4.4
-requests==2.23.0
-dataclasses>=0.7;python_version=="3.6"
+appdirs>=1.4.4
+requests
+dataclasses>=0.8;python_version=="3.6"
