--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [bumpversion]
 commit = True
-current_version = 3.5.3
+current_version = 3.6.0
 files = andriller/__init__.py
 tag = True
 tag_name = {new_version}
@@ -11,7 +11,6 @@ statistics = True
 
 [coverage:run]
 omit =
-	andriller/windows.py
-	andriller/tooltips.py
+	andriller/gui/*
 	andriller/__init__.py
 	andriller/__main__.py
