--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-wheel
 dateutils
 javaobj-py3>=0.4.3
 pycryptodomex
 python-dateutil
 XlsxWriter
-Jinja2
+Jinja2>=2.11.3,<3
+MarkupSafe==2.0.1
 wrapt-timeout-decorator==1.3.1
-appdirs>=1.4.4
+appdirs>=1.4.4,<2
 requests
 dataclasses>=0.8;python_version=="3.6"
