--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py36,py37,py38,py39
+envlist = py36,py37,py38,py39,py310
 
 [testenv]
 setenv =
@@ -22,3 +22,6 @@ basepython = python3.8
 
 [testenv:py39]
 basepython = python3.9
+
+[testenv:py310]
+basepython = python3.10
